# LLMevallab

./: README.md  pyproject.toml
configs/: config.yaml  prompts.yaml
src/pipeline/: data_loader.py  orchestrator.py
