[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "llmevallab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "python-dotenv==1.0.1",
    "pydantic==2.7.1",
    "pyyaml==6.0.1",
    "requests==2.32.3",
    # LLM Providers
    "google-generativeai==0.7.2",
    # Evaluation Metrics
    "nltk==3.8.1",
    "rouge-score==0.1.2",
    "bert-score==0.3.13",
    "torch==2.3.1",
    "transformers==4.41.2",
    # Data & Utils
    "datasets==2.19.1",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "tqdm==4.66.4",
    # Notebook
    "jupyter==1.0.0",
    "ipykernel==6.29.4",
    # Testing
    "pytest==8.2.0",
]
